--- a/task4.html
+++ b/task4.html
@@ -21,6 +21,7 @@
 				left: 50%;
 				margin-left: -202px;
 				margin-top: -100px;
+				transition: all 1s;
 			}
 			
 			.text {
@@ -36,11 +37,11 @@
 				font: 900 16px "微软雅黑";
 				opacity:0;
 				cursor:pointer;
-				background-image:-webkit-linear-gradient(left, #b670ef, #f26aa9 25%, #b670ef 50%, #f26aa9 75%, #b670ef);
 				background-image:-webkit-linear-gradient(left, #0000FF, #CC3299 25%, #00FFFF 50%, #CC3299 75%, #0000FF);
 				-webkit-background-clip:text;
 				-webkit-text-fill-color:transparent;
-				-webkit-background-size:700% 100%;
+				background-size:700% 100%;
+				transition: all 1s;
 			}
 			@-webkit-keyframes text-animation{
 				0%{
@@ -56,42 +57,39 @@
 				opacity: 0;
 				content: "";
 				box-sizing: border-box;
+				transition: all 1s;
 			}
 			.wrapper:hover>.text{
 				opacity:1;
-				transition-duration:1s;
 			}
 			.text:before {
 				border-top: 4px solid #fff;
 				border-bottom: 4px solid #fff;
 				top: 0;
-				left: 25%;
-				width: 50%;
+				left: 50%;
+				width: 0;
 				height: 100%;
 			}
 			.wrapper:hover>.text:before {
 				opacity: 1;
 				left: 0;
 				width: 100%;
-				transition-duration:1s;
 			}
 			.text:after {
 				border-left: 4px solid #fff;
 				border-right: 4px solid #fff;
-				top: 25%;
+				top: 50%;
 				left: 0;
 				width: 100%;
-				height: 50%;
+				height: 0%;
 			}
 			
 			.wrapper:hover>.text:after {
 				opacity: 1;
 				top: 0;
 				height: 100%;
-				transition: all 1s;
 			}
 			.wrapper:hover>img{
-				transition-duration:1s;
 				filter:blur(6px);
 			}
 			.wrapper:hover>.text{
