--- a/task2.html
+++ b/task2.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>自定义网页右键菜单</title>
 	</head>
 	<script>
 		window.onload = function() {
