--- a/task4.html
+++ b/task4.html
@@ -1,11 +1,8 @@
 <!DOCTYPE HTML>
 <html>
-
 	<head>
 		<meta charset="utf-8">
-		<title> 让文字颜色渐变 </title>
-		<meta name="Keywords" content="">
-		<meta name="Description" content="">
+		<title>有趣的鼠标悬浮模糊效果 </title>
 		<style type="text/css">
 			.wrapper {
 				position: relative;
