--- a/ife_xiaowei/task6.html
+++ b/ife_xiaowei/task6.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>任务六：通过HTML及CSS模拟报纸排版</title>
 		<link href="css/task6.css" rel="stylesheet" />
 	</head>
 	<style>
