--- a/ife_binbin/task4.html
+++ b/ife_binbin/task4.html
@@ -13,7 +13,7 @@
 		.num {
 			float: left;
 			height: 40px;
-			width: 40px;
+			padding:0 10px;
 			line-height: 40px;
 			text-align: center;
 			background: red;
