--- a/ife_binbin/task8.html
+++ b/ife_binbin/task8.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="UTF-8">
-		<title>任务八：JavaScript和树（二）</title>
+		<title>任务九：JavaScript和树（三）</title>
 	</head>
 	<style>
 		div {
@@ -54,7 +54,6 @@
 				btn1 = document.getElementById("btn1"),
 				btn2 = document.getElementById("btn2"),
 				inp = document.getElementById("inp"),
-				div = document.getElementsByTagName("div"),
 				list = [],
 				listElement = [];
 
