--- a/ife_binbin/task8.html
+++ b/ife_binbin/task8.html
@@ -113,7 +113,7 @@
 						clearInterval(si);
 						list[i - 1].style.background = "#fff";
 						if(flag) {
-							alert("找不到该元素");
+							alert("找不到该元素!!");
 						}
 					}
 				}, 500);
