--- a/ife_yaoyao/task7.html
+++ b/ife_yaoyao/task7.html
@@ -99,6 +99,7 @@
 			</tr>
 		</table>
 		<script>
+			"use strict"
 			var p = document.getElementsByTagName("tr"),
 				sort = document.getElementsByClassName("head")[0].children;
 			for(let i = 1; i < sort.length; i++) {
