--- a/ife_yaoyao/task5.html
+++ b/ife_yaoyao/task5.html
@@ -198,7 +198,7 @@
 			 * 
 			 * */
 			function init() {
-				for(let i = 0; i < 11; i++) {
+				for(var i = 0; i < 11; i++) {
 					for(var j = 0; j < 11; j++) {
 						var li = document.createElement("li");
 						if(i === 0 && j === 0) {
